[package]
name = "bittorrent-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bencode = "0.2.4"
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tokio = { version = "1.47.1", features = ["full"] }
